2005-05-19  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/BasicFileChooserUI.java:
	(installComponents): Include parents ComboBox. This has been
	commented out because ComboBox was broken (see previous entry).

2005-05-19  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalComboBoxUI.java
	(createUI): Do not share instances of this UI class between
	different JComboBoxes.

2005-05-19  Kim Ho  <kho@luxsci.net>

	* javax/swing/DefaultComboBoxModel.java:
	(addElement): Set index to be the element of the added item.
	(removeAllElements): Clear before retrieving new size. Use
	correct size.
	* javax/swing/JFileChooser.java: Implemented.
	* javax/swing/filechooser/FileSystemView.java: Implemented.
	* javax/swing/filechooser/UnixFileSystemView.java: New file.
	Implemented.
	* javax/swing/plaf/basic/BasicComboBoxUI.java:
	(intervalAdded): Set initial index to start.
	* javax/swing/plaf/basic/BasicDirectoryModel.java: New file.
	Implemented.
	* javax/swing/plaf/basic/BasicFileChooserUI.java: New file.
	Implemented.
	* javax/swing/plaf/basic/BasicLookAndFeel.java: Add FileChooserUI.
	Commented out GIF properties for FileChooser stuff.

2005-05-19  Michael Koch  <konqueror@gmx.de>

	* lib/Makefile.am: Remove accidentally commited -nowarn option for
	jikes.

2005-05-19  Michael Koch  <konqueror@gmx.de>

	* java/text/DateFormatSymbols.java
	(getStringArray): New method.
	(getZoneStrings): Likewise.
	(DateFormatSymbols): Load symbols from properties files.
	* java/util/Locale.java
	(getDisplayLanguage): Handle new way to load language names.
	(getDisplayCountry): Handle new way to load territory names.
	(getDisplayVariant): Handle new way to load variant names.
	* lib/Makefile.am, lib/gen-classlist.sh.in:
	No need to special case classes from gnu.java.locale anymore.
	* scripts/generate-locale-list.sh:
	Generate list from the new properties files.
	* LICENSE: Added license of locale data properties files.

2005-05-19  Michael Koch  <konqueror@gmx.de>
